@@ -9,15 +9,19 @@ override_dh_fixperms:
 
 override_dh_auto_build:
 	dh_auto_build
+	# html documentation
 	cp -a docsite/latest docbuild
 	cp debian/missing-files/*.jpg docbuild
 	PYTHONPATH=../lib make docs -C docbuild
 	mv docbuild/htmlout html
 	cp -r docbuild/man html/
 	rm -rf docbuild
+	# man pages for the "man3" section
+	make docs
 
 override_dh_auto_clean:
-	rm -rf html
+	# sphinx auto-build stuff
+	rm -rf html docs/man/man3/*.3
 	dh_auto_clean
 
 override_dh_installchangelogs:
