@@ -11,9 +11,10 @@ ansible (1.3.4+dfsg-0.1) unstable; urgency=low
   * Add patch header information to fix-html-makefile.
   
   [ Michael Vogt ]
-  * update to 1.3.4
+  * add myself to uploader
+  * build/ship the module manpages for ansible in the ansible package
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 31 Oct 2013 13:23:37 +0100
+ -- Michael Vogt <mvo@debian.org>  Thu, 31 Oct 2013 13:23:37 +0100
 
 ansible (1.2.1+dfsg-1) unstable; urgency=low
 
